--- a/index.html
+++ b/index.html
@@ -44,20 +44,22 @@
                 src="https://media-exp1.licdn.com/dms/image/C5603AQF-zCONtkOAlg/profile-displayphoto-shrink_200_200/0?e=1586390400&v=beta&t=Xo7cOn2cguZA9fm19TjRQwUok53Fq75-LJ1ZCn1Zkz0">
         </a>
           <h3>Personal</h3>
-          <p>Hi. My name is Jaspreet Singh</p>
+          <p class="lead">Hi. My name is Jaspreet Singh. Welcome to my site, here you can find information related to my work and my contact information.</p>
 
           <h3>Professional</h3>
-          <p>I am working at Ticketmaster.</p>
-          <p>Check my resume by clicking link below:</p>
+          <p class="lead">I am currently working with Ticketmaster.</p>
+          <p class="lead">Check my resume by clicking link below:</p>
 
-          <a href="https://drive.google.com/open?id=1PZTpzNE009qGB9oSUyduj8_xwjdKReff" id="resume">My Resume</a>
+          <a href="https://drive.google.com/open?id=1PZTpzNE009qGB9oSUyduj8_xwjdKReff" id="resume" class="lead">My Resume</a>
           <br>
           <br>
 
           </h4>
         </div>
       </div>
+      
   </div>
+  
 
   <div class="padding" id="projects">
     <h3>PROJECTS</h3>
