--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       </p>
       <br>
       <p class="lead">
-          <ul id="text" class="lead">
+          <ul class="lead">
               <li>My projects are divides between Nodejs and Java. I decided for these two languages as it is a mixture of both high and low level programming languages.</li>
               <li>With Java I do unit testing with Junit to make sure single api's are working to make the program robust. </li>
               <li>I also use git for version control and github platform for storing my code in repositories.</li>
