--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div id="home">
       <div id="text">
         <a
-            href="javascript:alert('Thank you for visiting my site. Please checkout the guest section to go to the user dashboard');"><img
+            href="javascript:alert('Thank you for visiting my site. Please checkout my resume, work and contact information!');"><img
                 id="pic"
                 src="https://media-exp1.licdn.com/dms/image/C5603AQF-zCONtkOAlg/profile-displayphoto-shrink_200_200/0?e=1586390400&v=beta&t=Xo7cOn2cguZA9fm19TjRQwUok53Fq75-LJ1ZCn1Zkz0">
         </a>
