--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <a
             href="javascript:alert('Thank you for visiting my site. Please checkout my resume, work and contact information!');"><img
                 id="pic"
-                src="https://media-exp1.licdn.com/dms/image/C5603AQF-zCONtkOAlg/profile-displayphoto-shrink_200_200/0?e=1586390400&v=beta&t=Xo7cOn2cguZA9fm19TjRQwUok53Fq75-LJ1ZCn1Zkz0">
+                src="img/0.jpg">
         </a>
           <h3>Personal</h3>
           <p class="lead">Hi. My name is Jaspreet Singh. Welcome to my site, here you can find information related to my work and my contact information.</p>
