--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <p class="lead">I am currently working with Ticketmaster.</p>
           <p class="lead">Check my resume by clicking link below:</p>
 
-          <a href="https://drive.google.com/open?id=1PZTpzNE009qGB9oSUyduj8_xwjdKReff" id="resume" class="lead">My Resume</a>
+          <a href="https://drive.google.com/file/d/1294ffttoXQm6W5gza4PAq6rzh1_-Z4l1/view?usp=sharing" id="resume" class="lead">My Resume</a>
           <br>
           <br>
 
