--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
           <p class="lead">Hi. My name is Jaspreet Singh. Welcome to my site, here you can find information related to my work and my contact information.</p>
 
           <h3>Professional</h3>
-          <p class="lead">I am currently working with Ticketmaster.</p>
-          <p class="lead">Check my resume by clicking link below:</p>
+          <p class="lead">Actively looking for new opportunities.</p>
+          <p class="lead">Check out my resume by clicking link below:</p>
 
-          <a href="https://drive.google.com/file/d/1TPEAJ-FqKZLlMbeFLE7nz339kDYQlyu_/view?usp=sharing" id="resume" class="lead">My Resume</a>
+          <a href="https://drive.google.com/file/d/1ZHauO2haEQRLcGWqoCNg_DmSxKhIvayD/view?usp=sharing">My Resume</a>
           <br>
           <br>
 
