--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
                 src="img/0.jpg">
         </a>
           <h3>Personal</h3>
-          <p class="lead">Hi. My name is Jaspreet Singh. Welcome to my site, here you can find information related to my work and my contact information.</p>
+          <p class="lead">Hi! I am Jaspreet Singh, a tech-driven person currently engaged in software development and testing.</p>
 
           <h3>Professional</h3>
           <p class="lead">Actively looking for new opportunities.</p>
-          <p class="lead">Check out my resume by clicking link below:</p>
+          <p class="lead">Check out my resume by clicking the link below:</p>
 
           <a href="https://drive.google.com/file/d/1ZHauO2haEQRLcGWqoCNg_DmSxKhIvayD/view?usp=sharing">My Resume</a>
           <br>
